# xares-llm

./: LICENSE  README.md  pyproject.toml
example/dasheng/: dasheng_base.py
example/dummy/: dummyencoder.py
example/whisper_base/: whisper_base.py
scripts/: generate_configs.py
src/xares_llm/: audio_encoder_checker.py  audiowebdataset.py  download_data.py  metrics.py  run.py  task.py  trainer.py  utils.py
src/xares_llm/modeling_audiollm/: configuration_xaresllm.py  modeling_xaresllm.py
src/xares_llm/tasks/all/eval/: evaluation_all.yaml
src/xares_llm/tasks/all/train/: all_train_config.yaml
src/xares_llm/tasks/single/eval/: aishell-1_test_config.yaml  asvspoof2015_test_config.yaml  clotho_test_config.yaml  cremad_test_config.yaml  esc-50_test_config.yaml  fluentspeechcommands_test_config.yaml  freemusicarchive_test_config.yaml  fsd50k_test_config.yaml  fsdkaggle2018_test_config.yaml  gtzan_test_config.yaml  libricount_test_config.yaml  librispeech_test_config.yaml  mecat_test_config.yaml  nsynth_test_config.yaml  songdescriber_test_config.yaml  speechcommandsv1_test_config.yaml  urbansound8k_test_config.yaml  vocalsound_test_config.yaml  voxceleb1_test_config.yaml  voxlingua33_test_config.yaml
src/xares_llm/tasks/single/train/: aishell-1_config.yaml  asvspoof2015_config.yaml  clotho_config.yaml  cremad_config.yaml  esc-50_config.yaml  fluentspeechcommands_config.yaml  freemusicarchive_config.yaml  fsd50k_config.yaml  fsdkaggle2018_config.yaml  gtzan_config.yaml  libricount_config.yaml  librispeech_config.yaml  mecat_config.yaml  nsynth_config.yaml  songdescriber_config.yaml  speechcommandsv1_config.yaml  urbansound8k_config.yaml  vocalsound_config.yaml  voxceleb1_config.yaml  voxlingua33_config.yaml
src/xares_llm/tasks/task1/eval/: eval_task1_config.yaml
src/xares_llm/tasks/task2/eval/: eval_task2_config.yaml
src/xares_llm/tasks/task2/train/: train_task2_config.yaml
