[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xares-llm"
version = "0.0.7"
description = "eXtensive Audio Representation and Evaluation Suite - Large Language Model"
dependencies = [
  "loguru",
  "numpy",
  "jiwer",
  "scikit-learn",
  "torch>=2.2.1",
  "torchaudio>=2.2.1",
  "torchmetrics>=1.6.1",
  "pandas>=2.2.3",
  "transformers>=4.45",
  "tqdm",
  "webdataset>=1.0",
  "torchcodec>=0.8.0",
  "accelerate>=1.10.1", #Training
  "peft>=0.18.0",
  "mecat>=1.0.4",
]
authors = [
  {name = "Junbo Zhang", email = "zhangjunbo1@xiaomi.com"},
  {name = "Heinrich Dinkel", email = "dinkelheinrich@xiaomi.com"},
  {name = "Yadong Niu", email = "niuyadong@xiaomi.com"},
  {name = "Jiahao Zhou", email = "zhoujiahao5@xiaomi.com"},
  {name = "Xiyang Li", email = "lixiyang@xiaomi.com"},
]
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE"]


[project.urls]
Repository = "https://github.com/xiaomi-research/xares-llm.git"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xares_llm = [
  "tasks/all/eval/*yaml",
  "tasks/all/train/*yaml",
  "tasks/task1/eval/*yaml",
  "tasks/task1/train/*yaml",
  "tasks/task2/eval/*yaml",
  "tasks/task2/train/*yaml",
  "tasks/single/eval/*.yaml",
  "tasks/single/train/*.yaml",
]
